$Id$

MIDIbox NG V1.029
~~~~~~~~~~~~~~~~~

   o added USB MIDI workaround for Windows


MIDIbox NG V1.028
~~~~~~~~~~~~~~~~~

   o DOUT_MATRIX n=8 properly supported

   o now up to 16 DOUT_MATRIX and DIN_MATRIX can be configured


MIDIbox NG V1.027
~~~~~~~~~~~~~~~~~

   o .NGR: added "set_active" command. It can be alternatively used
     instead of the bank mechanism to activate/deactivate events,
     e.g. if the same events should be activated in multiple banks under
     certain conditions.
     A demo can be found under cfg/tests/multibnk.*

   o it's now possible to set a static forward value independent from the
     actual value of the event which initiates the forwarding.

     E.g. with
        EVENT_xxx fwd_id=SENDER:1:42
     the SENDER:1 will always get value 42 for additional processing

   o support for multiple MBHP_MF_NG modules in a chain.
     See cfg/test/mf_multi.ngc for a configuration example

   o support for Logic Control Meters
     Configuration example: see cfg/templates/logictrl.ngc
     (search for "meter")

   o added new GLCD fonts (provided by Pcbatterij): Inverted and Tiny.
     In order to test these fonts, try following commands in the MIOS Terminal:
     lcd %C&t@(1:1:1)Tiny Font
     lcd %C&i@(1:1:1)Inverted Font

   o fixed OSC receiver (avoided stack overflow)

   o various minor bugfixes


MIDIbox NG V1.026
~~~~~~~~~~~~~~~~~

   o support for nrpn_format=MsbOnly (e.g. for MBSEQ V4 NRPNs)

   o new EVENT parameter ain_sensor_mode:

     With ain_sensor_mode=NoteOnOff, AIN and AINSER events, which are 
     assigned to Note events, send velocity 0 before a new Note is sent
     with velocity > 0 to avoid hanging notes.

     With ain_sensor_mode=None (default if no sensor mode specified),
     Note events will be generated as a continuous stream like CCs


MIDIbox NG V1.025
~~~~~~~~~~~~~~~~~

   o new terminal commands:
     - ngc: allows to execute a .NGC command directly
     - ngr: allows to execute a .NGR command directly